--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="/src/styles.css">
   <!--Fontawesome-->
-<script src="https://kit.fontawesome.com/142ab572f9.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/142ab572f9.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
